Add api doc for verify and request otp
